// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/VehicleResult/ShareLookupMenu DefaultNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="vehicles new-style">
            <div class="vehicle card">
              <div class="share-buttons card-header">
                <div class="copy-buttons">
                  <button aria-label="copy link to lookup"
                          class="header-logo-button"
                          data-testid="copy-link-button"
                  >
                    <span class="fa-layers fa-fw">
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="circle"
                           class="svg-inline--fa fa-circle circle "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="copy"
                           class="svg-inline--fa fa-copy logo "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 448 512"
                           style="transform-origin: 0.4375em 0.5em;"
                      >
                        <g transform="translate(224 256)">
                          <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"
                                  transform="translate(-224 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </button>
                  <button aria-label="copy image of lookup"
                          class="header-logo-button"
                          data-testid="copy-image-button"
                  >
                    <span class="fa-layers fa-fw">
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="circle"
                           class="svg-inline--fa fa-circle circle "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="camera"
                           class="svg-inline--fa fa-camera logo "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M149.1 64.8L138.7 96 64 96C28.7 96 0 124.7 0 160L0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64l-74.7 0L362.9 64.8C356.4 45.2 338.1 32 317.4 32L194.6 32c-20.7 0-39 13.2-45.5 32.8zM256 192a96 96 0 1 1 0 192 96 96 0 1 1 0-192z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </button>
                </div>
                <div class="social-media-share-buttons">
                  <button aria-label="share lookup to Twitter"
                          data-testid="twitter-share-button"
                          class="react-share__ShareButton twitter-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#00aced"
                      >
                      </circle>
                      <path d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                  <button aria-label="share lookup to Bluesky"
                          data-testid="bluesky-share-button"
                          class="react-share__ShareButton bluesky-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#1185FE"
                      >
                      </circle>
                      <path d="M21.945 18.886C26.015 21.941 30.393 28.137 32 31.461 33.607 28.137 37.985 21.941 42.055 18.886 44.992 16.681 49.75 14.975 49.75 20.403 49.75 21.487 49.128 29.51 48.764 30.813 47.497 35.341 42.879 36.496 38.772 35.797 45.951 37.019 47.778 41.067 43.833 45.114 36.342 52.801 33.066 43.186 32.227 40.722 32.073 40.27 32.001 40.059 32 40.238 31.999 40.059 31.927 40.27 31.773 40.722 30.934 43.186 27.658 52.801 20.167 45.114 16.222 41.067 18.049 37.019 25.228 35.797 21.121 36.496 16.503 35.341 15.236 30.813 14.872 29.51 14.25 21.487 14.25 20.403 14.25 14.975 19.008 16.681 21.945 18.886Z"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                  <button aria-label="share lookup to Reddit"
                          data-testid="reddit-share-button"
                          class="react-share__ShareButton reddit-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#FF5700"
                      >
                      </circle>
                      <path d="M 53.34375 32 C 53.277344 30.160156 52.136719 28.53125 50.429688 27.839844 C 48.722656 27.148438 46.769531 27.523438 45.441406 28.800781 C 41.800781 26.324219 37.519531 24.957031 33.121094 24.863281 L 35.199219 14.878906 L 42.046875 16.320312 C 42.214844 17.882812 43.496094 19.09375 45.066406 19.171875 C 46.636719 19.253906 48.03125 18.183594 48.359375 16.644531 C 48.6875 15.105469 47.847656 13.558594 46.382812 12.992188 C 44.914062 12.425781 43.253906 13.007812 42.464844 14.367188 L 34.625 12.800781 C 34.363281 12.742188 34.09375 12.792969 33.871094 12.9375 C 33.648438 13.082031 33.492188 13.308594 33.441406 13.566406 L 31.070312 24.671875 C 26.617188 24.738281 22.277344 26.105469 18.59375 28.609375 C 17.242188 27.339844 15.273438 26.988281 13.570312 27.707031 C 11.863281 28.429688 10.746094 30.089844 10.71875 31.941406 C 10.691406 33.789062 11.757812 35.484375 13.441406 36.257812 C 13.402344 36.726562 13.402344 37.195312 13.441406 37.664062 C 13.441406 44.832031 21.792969 50.65625 32.097656 50.65625 C 42.398438 50.65625 50.753906 44.832031 50.753906 37.664062 C 50.789062 37.195312 50.789062 36.726562 50.753906 36.257812 C 52.363281 35.453125 53.371094 33.800781 53.34375 32 Z M 21.34375 35.199219 C 21.34375 33.433594 22.777344 32 24.542969 32 C 26.3125 32 27.742188 33.433594 27.742188 35.199219 C 27.742188 36.96875 26.3125 38.398438 24.542969 38.398438 C 22.777344 38.398438 21.34375 36.96875 21.34375 35.199219 Z M 39.9375 44 C 37.664062 45.710938 34.871094 46.582031 32.03125 46.464844 C 29.191406 46.582031 26.398438 45.710938 24.128906 44 C 23.847656 43.65625 23.871094 43.15625 24.183594 42.839844 C 24.5 42.527344 25 42.503906 25.34375 42.785156 C 27.269531 44.195312 29.617188 44.90625 32 44.800781 C 34.386719 44.929688 36.746094 44.242188 38.6875 42.847656 C 39.042969 42.503906 39.605469 42.511719 39.953125 42.863281 C 40.296875 43.21875 40.289062 43.785156 39.9375 44.128906 Z M 39.359375 38.527344 C 37.59375 38.527344 36.160156 37.09375 36.160156 35.328125 C 36.160156 33.5625 37.59375 32.128906 39.359375 32.128906 C 41.128906 32.128906 42.558594 33.5625 42.558594 35.328125 C 42.59375 36.203125 42.269531 37.054688 41.65625 37.6875 C 41.046875 38.316406 40.203125 38.664062 39.328125 38.65625 Z M 39.359375 38.527344"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <ul>
            </ul>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/VehicleResults/VehicleResult/ShareLookupMenu DefaultOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="vehicles ">
            <div class="vehicle card">
              <div class="share-buttons card-header">
                <div class="copy-buttons">
                  <button aria-label="copy link to lookup"
                          class="header-logo-button"
                          data-testid="copy-link-button"
                  >
                    <span class="fa-layers fa-fw">
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="circle"
                           class="svg-inline--fa fa-circle circle "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="copy"
                           class="svg-inline--fa fa-copy logo "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 448 512"
                           style="transform-origin: 0.4375em 0.5em;"
                      >
                        <g transform="translate(224 256)">
                          <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M208 0L332.1 0c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9L448 336c0 26.5-21.5 48-48 48l-192 0c-26.5 0-48-21.5-48-48l0-288c0-26.5 21.5-48 48-48zM48 128l80 0 0 64-64 0 0 256 192 0 0-32 64 0 0 48c0 26.5-21.5 48-48 48L48 512c-26.5 0-48-21.5-48-48L0 176c0-26.5 21.5-48 48-48z"
                                  transform="translate(-224 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </button>
                  <button aria-label="copy image of lookup"
                          class="header-logo-button"
                          data-testid="copy-image-button"
                  >
                    <span class="fa-layers fa-fw">
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="circle"
                           class="svg-inline--fa fa-circle circle "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(1.3125, 1.3125)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                      <svg aria-hidden="true"
                           focusable="false"
                           data-prefix="fas"
                           data-icon="camera"
                           class="svg-inline--fa fa-camera logo "
                           role="img"
                           xmlns="http://www.w3.org/2000/svg"
                           viewbox="0 0 512 512"
                           style="transform-origin: 0.5em 0.5em;"
                      >
                        <g transform="translate(256 256)">
                          <g transform="translate(0, 0)  scale(0.75, 0.75)  rotate(0 0 0)">
                            <path fill="currentColor"
                                  d="M149.1 64.8L138.7 96 64 96C28.7 96 0 124.7 0 160L0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64l-74.7 0L362.9 64.8C356.4 45.2 338.1 32 317.4 32L194.6 32c-20.7 0-39 13.2-45.5 32.8zM256 192a96 96 0 1 1 0 192 96 96 0 1 1 0-192z"
                                  transform="translate(-256 -256)"
                            >
                            </path>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </button>
                </div>
                <div class="social-media-share-buttons">
                  <button aria-label="share lookup to Twitter"
                          data-testid="twitter-share-button"
                          class="react-share__ShareButton twitter-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#00aced"
                      >
                      </circle>
                      <path d="M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                  <button aria-label="share lookup to Bluesky"
                          data-testid="bluesky-share-button"
                          class="react-share__ShareButton bluesky-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#1185FE"
                      >
                      </circle>
                      <path d="M21.945 18.886C26.015 21.941 30.393 28.137 32 31.461 33.607 28.137 37.985 21.941 42.055 18.886 44.992 16.681 49.75 14.975 49.75 20.403 49.75 21.487 49.128 29.51 48.764 30.813 47.497 35.341 42.879 36.496 38.772 35.797 45.951 37.019 47.778 41.067 43.833 45.114 36.342 52.801 33.066 43.186 32.227 40.722 32.073 40.27 32.001 40.059 32 40.238 31.999 40.059 31.927 40.27 31.773 40.722 30.934 43.186 27.658 52.801 20.167 45.114 16.222 41.067 18.049 37.019 25.228 35.797 21.121 36.496 16.503 35.341 15.236 30.813 14.872 29.51 14.25 21.487 14.25 20.403 14.25 14.975 19.008 16.681 21.945 18.886Z"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                  <button aria-label="share lookup to Reddit"
                          data-testid="reddit-share-button"
                          class="react-share__ShareButton reddit-share-button share-button"
                  >
                    <svg viewbox="0 0 64 64"
                         width="32"
                         height="32"
                         crossorigin
                    >
                      <circle cx="32"
                              cy="32"
                              r="32"
                              fill="#FF5700"
                      >
                      </circle>
                      <path d="M 53.34375 32 C 53.277344 30.160156 52.136719 28.53125 50.429688 27.839844 C 48.722656 27.148438 46.769531 27.523438 45.441406 28.800781 C 41.800781 26.324219 37.519531 24.957031 33.121094 24.863281 L 35.199219 14.878906 L 42.046875 16.320312 C 42.214844 17.882812 43.496094 19.09375 45.066406 19.171875 C 46.636719 19.253906 48.03125 18.183594 48.359375 16.644531 C 48.6875 15.105469 47.847656 13.558594 46.382812 12.992188 C 44.914062 12.425781 43.253906 13.007812 42.464844 14.367188 L 34.625 12.800781 C 34.363281 12.742188 34.09375 12.792969 33.871094 12.9375 C 33.648438 13.082031 33.492188 13.308594 33.441406 13.566406 L 31.070312 24.671875 C 26.617188 24.738281 22.277344 26.105469 18.59375 28.609375 C 17.242188 27.339844 15.273438 26.988281 13.570312 27.707031 C 11.863281 28.429688 10.746094 30.089844 10.71875 31.941406 C 10.691406 33.789062 11.757812 35.484375 13.441406 36.257812 C 13.402344 36.726562 13.402344 37.195312 13.441406 37.664062 C 13.441406 44.832031 21.792969 50.65625 32.097656 50.65625 C 42.398438 50.65625 50.753906 44.832031 50.753906 37.664062 C 50.789062 37.195312 50.789062 36.726562 50.753906 36.257812 C 52.363281 35.453125 53.371094 33.800781 53.34375 32 Z M 21.34375 35.199219 C 21.34375 33.433594 22.777344 32 24.542969 32 C 26.3125 32 27.742188 33.433594 27.742188 35.199219 C 27.742188 36.96875 26.3125 38.398438 24.542969 38.398438 C 22.777344 38.398438 21.34375 36.96875 21.34375 35.199219 Z M 39.9375 44 C 37.664062 45.710938 34.871094 46.582031 32.03125 46.464844 C 29.191406 46.582031 26.398438 45.710938 24.128906 44 C 23.847656 43.65625 23.871094 43.15625 24.183594 42.839844 C 24.5 42.527344 25 42.503906 25.34375 42.785156 C 27.269531 44.195312 29.617188 44.90625 32 44.800781 C 34.386719 44.929688 36.746094 44.242188 38.6875 42.847656 C 39.042969 42.503906 39.605469 42.511719 39.953125 42.863281 C 40.296875 43.21875 40.289062 43.785156 39.9375 44.128906 Z M 39.359375 38.527344 C 37.59375 38.527344 36.160156 37.09375 36.160156 35.328125 C 36.160156 33.5625 37.59375 32.128906 39.359375 32.128906 C 41.128906 32.128906 42.558594 33.5625 42.558594 35.328125 C 42.59375 36.203125 42.269531 37.054688 41.65625 37.6875 C 41.046875 38.316406 40.203125 38.664062 39.328125 38.65625 Z M 39.359375 38.527344"
                            fill="white"
                      >
                      </path>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <ul>
            </ul>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
